add testes para ConfiguracoesMultas